lesson-2-pods-deploymens-and-such/example/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpbin-deployment
  labels:
    app: openshift-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: openshift-demo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openshift-demo
    spec:
        imagePullPolicy: IfNotPresent
        containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          ports:
          - name: allport
            containerPort: 80
          securityContext:
            runAsUser: 0
          volumeMounts:
          - name: cacerts
            mountPath: /var/run/configmaps/cacerts
            readOnly: true
          - name: serving-cert
            mountPath: /var/run/secrets/serving-cert
        volumes:
        - name: cacerts
          configMap:
            defaultMode: 444
            name: service-ca
        - name: serving-cert
          secret:
            secretName: service-ca-serving-cert
            defaultMode: 400
