lesson-2-pods-deploymens-and-such/example/fedorapod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: dreamer
  labels:
    app: openshift-demo
spec:
    restartPolicy: Never 
    containers:
    - name: fedora
      image: fedora:latest
      command:
      - sleep
      args:
      - "infinity"
