lesson-2-pods-deploymens-and-such/example/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpbin
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: httpbin-svc
